feat: add Tile struct and TileMap typedef for the grid map system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(untitled main.cpp
         manager.h
-        game_manager.h)
+        game_manager.h
+        tile.h)
 
 # Use sdl2-config to get the paths for SDL2
 execute_process(COMMAND sdl2-config --cflags OUTPUT_VARIABLE SDL2_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
