chore: add more file extensions to be excluded in later commits

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c++,cmake,clion
 # Edit at https://www.toptal.com/developers/gitignore?templates=c++,cmake,clion
 
+build.ninja
+.ninja_*
+untitled
+*.log
+
 ### C++ ###
 # Prerequisites
 *.d
