fix: SDL initialization and error handling
- Fix SDL_Init return value check (0 means success)
- Add support for more image formats (JPG, PNG, TIF, WEBP)
- Add support for more audio formats (MP3, OGG, FLAC)
- Improve error handling for audio system initialization
- Add null pointer checks for window and renderer

--- a/.gitignore
+++ b/.gitignore
@@ -172,4 +172,9 @@ CMakeUserPresets.json
 # External projects
 *-prefix/
 
+#vscode
+.vscode/
+
+
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake,clion
+
