feat(enemy): implement 5 specific enemy types
- Add basic Slime enemy with medium HP and slow speed
- Add King Slime
- Add Goblin Priest with with healing ability
- Add Skeleton
- All enemies:
  - Inherit from Enemy base class
  - Support config templates
  - Include 4-direction animations
  - Add detailed comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,17 @@ set(CMAKE_CXX_STANDARD 17)
 # Add SDL2 include path to compiler flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/homebrew/include/SDL2")
 
+# Find cJSON
+find_path(CJSON_INCLUDE_DIR cJSON.h PATHS /opt/homebrew/include /usr/local/include)
+find_library(CJSON_LIBRARY NAMES cjson PATHS /opt/homebrew/lib /usr/local/lib)
+
+if(NOT CJSON_INCLUDE_DIR OR NOT CJSON_LIBRARY)
+    message(FATAL_ERROR "cJSON not found. Please make sure cJSON is installed and the paths are correct.")
+endif()
+
+# Add include directories
+include_directories(${CJSON_INCLUDE_DIR})
+
 add_executable(untitled main.cpp
         include/manager/manager.h
         include/manager/game_manager.h
@@ -50,8 +61,5 @@ if(NOT SDL2_TTF_INCLUDE_DIR OR NOT SDL2_TTF_LIBRARY)
     message(FATAL_ERROR "SDL2_ttf not found. Please make sure SDL2_ttf is installed and the paths are correct.")
 endif()
 
-# Include directories for SDL2 and its extensions
-include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR} ${SDL2_TTF_INCLUDE_DIR})
-
-# Link SDL2 and its extensions
-target_link_libraries(untitled ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_MIXER_LIBRARY} ${SDL2_TTF_LIBRARY})
+# Link libraries
+target_link_libraries(untitled ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARY} ${SDL2_MIXER_LIBRARY} ${SDL2_TTF_LIBRARY} ${CJSON_LIBRARY})
