chore: Add build/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,6 @@ CMakeUserPresets.json
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake,clion
 
+# Build directories
+build/
+
